# polymarket-trading-ops-demo

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  PRD.md  README.md  analyzer_weather.py  calibrator.py  config.py  dashboard.py  db.py  llm.py  llm_sanity_check.py  logging_setup.py  main.py  model_eval.py  my_portfolio.py  polymarket_client.py  pyproject.toml  pytest.ini  recommendations.py  requirements.txt  weather_scanner.py
.github/workflows/: ci.yml
btc_5m_fv/: __init__.py
btc_5m_fv/backtest/: __init__.py  conditional.py  harness.py  metrics.py
btc_5m_fv/connectors/: __init__.py  base.py  binance.py  chainlink.py  polymarket.py  registry.py
btc_5m_fv/core/: __init__.py  exceptions.py  interfaces.py  types.py
btc_5m_fv/execution/: __init__.py  paper.py  risk.py
btc_5m_fv/ops/: __init__.py  controller.py  incidents.py  telemetry.py
btc_5m_fv/storage/: __init__.py  recorder.py  replay.py
btc_5m_fv/strategy/: __init__.py  fair_value.py  signal.py  sizing.py
btc_bot/: __init__.py  backtest.py  controller.py  history.py  paper.py  strategy.py
docs/: ARCHITECTURE.md  BACKTESTING.md  FILE_MAP.md  INTERVIEW_DEMO.md  OPERATIONS_RUNBOOK.md  ROADMAP.md
tests/: __init__.py  conftest.py  test_btc_smoke.py
tests/e2e/: test_dashboard_flow.py
tests/fixtures/: market_window.json  price_series.json  tick_series.json
tests/integration/: test_connector_integration.py
tests/unit/: test_backtest_harness.py  test_connectors.py  test_core_types.py  test_dashboard.py  (+8 more)
tools/: analyze_my_trades.py  backtest_btc_strategy.py  demo_snapshot.py
(+6 files in other folders)
