[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-5m-fv"
version = "0.2.0"
description = "BTC 5-minute binary fair-value trading system"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]
dev = ["ruff>=0.4", "mypy>=1.9"]

[tool.setuptools]
packages = ["btc_5m_fv", "btc_bot"]
py-modules = ["db", "config", "logging_setup", "main", "dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
